completed all but OAuth
