# swagger-output.json
@@ -46,7 +46,10 @@
                 "name",
                 "category",
                 "initCommand",
-                "notes"
+                "notes",
+                "officialDocs",
+                "installCommand",
+                "currentVersion"
               ],
               "properties": {
                 "name": {
@@ -56,10 +59,18 @@
                   "type": "string"
                 },
                 "initCommand": {
-                  "type": "string",
-                  "format": "email"
+                  "type": "string"
                 },
                 "notes": {
+                  "type": "string"
+                },
+                "officialDocs": {
+                  "type": "string"
+                },
+                "installCommand": {
+                  "type": "string"
+                },
+                "currentVersion": {
                   "type": "string"
                 }
               }
@@ -94,6 +105,9 @@
           "200": {
             "description": "OK"
           },
+          "400": {
+            "description": "Bad Request"
+          },
           "404": {
             "description": "Not Found"
           },
@@ -121,7 +135,10 @@
                 "name",
                 "category",
                 "initCommand",
-                "notes"
+                "notes",
+                "officialDocs",
+                "installCommand",
+                "currentVersion"
               ],
               "properties": {
                 "name": {
@@ -135,6 +152,15 @@
                 },
                 "notes": {
                   "type": "string"
+                },
+                "officialDocs": {
+                  "type": "string"
+                },
+                "installCommand": {
+                  "type": "string"
+                },
+                "currentVersion": {
+                  "type": "string"
                 }
               }
             }
@@ -143,6 +169,9 @@
         "responses": {
           "204": {
             "description": "No Content"
+          },
+          "400": {
+            "description": "Bad Request"
           },
           "404": {
             "description": "Not Found"
@@ -165,6 +194,163 @@
         "responses": {
           "204": {
             "description": "No Content"
+          },
+          "400": {
+            "description": "Bad Request"
+          },
+          "404": {
+            "description": "Not Found"
+          },
+          "500": {
+            "description": "Internal Server Error"
+          }
+        }
+      }
+    },
+    "/users/": {
+      "get": {
+        "description": "Get all users from DB",
+        "responses": {
+          "200": {
+            "description": "OK"
+          },
+          "500": {
+            "description": "Internal Server Error"
+          }
+        }
+      },
+      "post": {
+        "description": "Create a new user",
+        "parameters": [
+          {
+            "name": "user",
+            "in": "body",
+            "required": true,
+            "schema": {
+              "type": "object",
+              "required": [
+                "name",
+                "preferredFrontend",
+                "preferredBackend"
+              ],
+              "properties": {
+                "name": {
+                  "type": "string"
+                },
+                "preferredFrontend": {
+                  "type": "string"
+                },
+                "preferredBackend": {
+                  "type": "string"
+                }
+              }
+            }
+          }
+        ],
+        "responses": {
+          "201": {
+            "description": "Created"
+          },
+          "400": {
+            "description": "Bad Request"
+          },
+          "500": {
+            "description": "Internal Server Error"
+          }
+        }
+      }
+    },
+    "/users/{id}": {
+      "get": {
+        "description": "get a user by ID",
+        "parameters": [
+          {
+            "name": "id",
+            "in": "path",
+            "required": true,
+            "type": "string"
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "OK"
+          },
+          "400": {
+            "description": "Bad Request"
+          },
+          "404": {
+            "description": "Not Found"
+          },
+          "500": {
+            "description": "Internal Server Error"
+          }
+        }
+      },
+      "put": {
+        "description": "update a user's data",
+        "parameters": [
+          {
+            "name": "id",
+            "in": "path",
+            "required": true,
+            "type": "string"
+          },
+          {
+            "name": "user",
+            "in": "body",
+            "required": true,
+            "schema": {
+              "type": "object",
+              "required": [
+                "name",
+                "preferredFrontend",
+                "preferredBackend"
+              ],
+              "properties": {
+                "name": {
+                  "type": "string"
+                },
+                "preferredFrontend": {
+                  "type": "string"
+                },
+                "preferredBackend": {
+                  "type": "string"
+                }
+              }
+            }
+          }
+        ],
+        "responses": {
+          "204": {
+            "description": "No Content"
+          },
+          "400": {
+            "description": "Bad Request"
+          },
+          "404": {
+            "description": "Not Found"
+          },
+          "500": {
+            "description": "Internal Server Error"
+          }
+        }
+      },
+      "delete": {
+        "description": "delete a user",
+        "parameters": [
+          {
+            "name": "id",
+            "in": "path",
+            "required": true,
+            "type": "string"
+          }
+        ],
+        "responses": {
+          "204": {
+            "description": "No Content"
+          },
+          "400": {
+            "description": "Bad Request"
           },
           "404": {
             "description": "Not Found"
